# forge-gen

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix  result
src/: main.rs  manifest.rs  registry.rs
src/commands/: generate.rs  init.rs  list.rs  mod.rs  validate.rs
