[package]
name = "forge-gen"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Unified code generator — SDKs, IaC providers, schemas, and docs from OpenAPI specs"
license = "MIT"
repository = "https://github.com/pleme-io/forge-gen"

[[bin]]
name = "forge-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
glob = "0.3"
which = "7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
